Archive2/ce/7861835399bf6d/output
main.cpp:4:13: error: address of stack memory associated with local variable 'a' returned [-Werror,-Wreturn-stack-address]
    return &a;
            ^
1 error generated.
